# nexus

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/agents/: nexus-phase-1-foundation.md  nexus-phase-2-codegen-pipeline.md  nexus-phase-3-voice-avatar.md  nexus-phase-4-orchestration.md  nexus-phase-5-deploy-and-harden.md
apps/orchestrator/: .env.example  package.json  tsconfig.json
apps/orchestrator/src/: convex-pusher.ts  cursor.ts  daytona.ts  fal-routes.ts  fal.ts  index.ts  livekit.ts  narration.ts
apps/web/: .env.example  middleware.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: AvatarControls.tsx  AvatarPresence.tsx  Button.tsx  Logo.tsx  (+10 more)
convex/: auth.config.ts  auth.ts  events.ts  falJobs.ts  files.ts  http.ts  logs.ts  package.json  sandbox.ts  schema.ts  sessions.ts  users.ts
convex/_generated/: api.d.ts  dataModel.d.ts
docs/: architecture.md  auth-setup.md  build-plan.md  coding-agent-architecture.md  cost-per-run.md  demo-script.md  demo-voiceover.md  design-prompt.md  failure-modes.md  iframe-decision.md  latency-budget.md  questions.md  submission-short.md  submission.md  voice-architecture.md  voice-system-prompt.md  voice-tools-plan.md
services/livekit-agent/: .env.example  README.md  pyproject.toml
services/livekit-agent/prompts/: system_prompt.txt
services/livekit-agent/src/nexus_agent/: __init__.py  agent.py  exa_client.py  narration_server.py  orchestrator_client.py  tavily_client.py  worker.py
services/livekit-agent/src/nexus_agent/tools/: __init__.py  fal_tools.py
services/livekit-server/: README.md
(+24 files in other folders)
